--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -1,53 +1,45 @@
 <div class="container">
 	<div class="jumbotron">
 		<div class="row">
-			<div class="col-md 12">
+			<div class="col-md-1">
+			</div>
+			<div class="col-md 10">
 				<img id="picture" src="/assets/img/burger.png">
 				<h1> WELCOME TO GOODBURGER! </h1>
 				<h2>HOME of the Goodburger...</h2>
 				<h3>may I take your order?</h3>
 			</div>
+			<div class="col-md-1">
+			</div>
 		</div>
 	</div>
+<div>
+	<ul>
+	{{#each burgers}} {{#if this.devoured}}
 
-	{{!-- burger list before being eaten --}}
+	<button class="devour-burger" data-id="{{id}}">devour</button> {{this.burger_name}} {{/if}} {{/each}}
+	</ul>
+</div>
+<br>
+<br>
+	<div class="yums">
+		<h2>Burgers in the belly!</h2>
+
+		<ul>
+			{{#each burgers}} {{#unless this.devoured}} {{this.burger_name}} {{/unless}} {{/each}}
+		</ul>
+	</div>
+
+
+	{{!-- ***column for ADDING new burgers ***column for DEVOURED burgers ***DELETE button --}} {{!-- BURGERS to be added to
+	mySql database --}}
+
+
+
+
 	<div class="row">
-		<div class="col-md-4">
-			<div class="panel-panel default">
-				<ul class="list-group">
-					{{#each burgers}} {{#unless this.devoured}}
-					<li class="list-group-item">
-						<div class="input-group">
-							<p class="lead"> {{this.burger_name}} </p>
-							<span class="input-group-btn">
-								<form action="burgers/update/{{this.id}}?_method=PUT" method="POST">
-									<input type="hidden" name="devoured" value="true">
-									<button class="btn btn-default btn-lg" type="submit"> EAT IT! </button>
-								</form>
-							</span>
-						</div>
-					</li>
-					{{/unless}} {{/each}}
-				</ul>
-			</div>
+		<div class="col-md-1">
 		</div>
-
-
-		{{!-- burger list after being eaten --}}
-		<div class="row">
-			<div class="col-md-4">
-				<div class="panel panel-default">
-					<ul class="list-group">
-						{{#each burgers}} {{#if this.devoured}}
-						<li class="list-group-item">
-							<p class="lead">{{this.burger_name}} </p>
-						</li>
-						{{/if}} {{/each}}
-					</ul>
-				</div>
-			</div>
-		</div>
-
 		<div class="col-md-10">
 			<p class="lead"> Please type in the name of the burger you want to devour, then... click the submit button. </p>
 
@@ -63,4 +55,8 @@
 				</button>
 			</form>
 		</div>
+		<div class="col-md-1">
+		</div>
 	</div>
+</div>
+</div>
