--- a/public/assets/css/burger_style.css
+++ b/public/assets/css/burger_style.css
@@ -46,6 +46,14 @@ h3{
     height: 550px;  */
 }
 
+.growlin {
+    color: #30af89;
+}
+
+.yums {
+    color: #f1f442;
+}
+
 .lead{
     color: rgb(23, 31, 31);
     text-align: center;
