--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -13,37 +13,31 @@
 			</div>
 		</div>
 	</div>
-<div>
-	<ul>
-	{{#each burgers}} {{#if this.devoured}}
+	<div>
+		<div class="growlin">
+			<h2>Ordered burgers...</h2>
+			<ul>
+				{{#each burgers}} {{#if this.devoured}}
+				<button class="devour-burger" data-id="{{id}}">devour</button> {{this.burger_name}} {{/if}} {{/each}}
+			</ul>
+		</div>
 
-	<button class="devour-burger" data-id="{{id}}">devour</button> {{this.burger_name}} {{/if}} {{/each}}
-	</ul>
-</div>
-<br>
-<br>
-	<div class="yums">
-		<h2>Burgers in the belly!</h2>
-
-		<ul>
-			{{#each burgers}} {{#unless this.devoured}} {{this.burger_name}} {{/unless}} {{/each}}
-		</ul>
+		<br>
+		<br>
+		<div class="yums">
+			<h2>Burgers in the belly!</h2>
+			<ul>
+				{{#each burgers}} {{#unless this.devoured}} {{this.burger_name}} {{/unless}} {{/each}}
+			</ul>
+		</div>
 	</div>
-
-
-	{{!-- ***column for ADDING new burgers ***column for DEVOURED burgers ***DELETE button --}} {{!-- BURGERS to be added to
-	mySql database --}}
-
-
-
-
 	<div class="row">
 		<div class="col-md-1">
 		</div>
 		<div class="col-md-10">
 			<p class="lead"> Please type in the name of the burger you want to devour, then... click the submit button. </p>
 
-			{{!-- section to add burgers --}}
+
 			<form class="create-update-form" action="goodburgers/create" method="POST">
 
 				<div class="form-group">
