adding css corrections

--- a/views/index.handlebars
+++ b/views/index.handlebars
@@ -14,7 +14,7 @@
 		</div>
 	</div>
 
-	THE ADDED BURGERS NEEDS TO GO TO THE ORDERED BURGERS FIRST WITH THE 'DEVOURED' BUTTON, ONCE CLICKED THE BURGER NEEDS TO THEN GO TO 'BURGERS IN THE BELLY'
+	{{!-- THE ADDED BURGERS NEEDS TO GO TO THE ORDERED BURGERS FIRST WITH THE 'DEVOURED' BUTTON, ONCE CLICKED THE BURGER NEEDS TO THEN GO TO 'BURGERS IN THE BELLY' --}}
 	<div>
 		<div class="hungry">
 			<h2>Ordered burgers...</h2>
